--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,33 +3,40 @@ spring:
     name: servicio-rrhh
     
   datasource:
-    url: jdbc:mysql://localhost:3306/gym_rrhh?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://trolley.proxy.rlwy.net:22462/railway?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: Yoe1999!
+    password: isiLtnLLawXdbFRBrmdCxiwJXSRapasl
     driver-class-name: com.mysql.cj.jdbc.Driver
     
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
+
+  sql:
+    init:
+      mode: never                              # ⬅ Ejecuta data.sql siempre
+      encoding: UTF-8                          # ⬅ Evita errores de caracteres
+
       
 server:
-  port: 8082
+  port: ${PORT:8082}
   servlet:
     context-path: /
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server.railway.internal:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
     prefer-ip-address: false
+    hostname: servicio-usuario.railway.internal
     instance-id: ${spring.application.name}:${server.port}
 
 management:
@@ -40,10 +47,3 @@ management:
   endpoint:
     health:
       show-details: always
-
-logging:
-  level:
-    com.gimnasio.serviciorrhh: DEBUG
-    org.springframework.web: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
