--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,14 +3,14 @@ spring:
     name: servicio-rrhh
     
   datasource:
-    url: jdbc:mysql://trolley.proxy.rlwy.net:22462/railway?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://shuttle.proxy.rlwy.net:54416/railway?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: isiLtnLLawXdbFRBrmdCxiwJXSRapasl
+    password: HotwnStnZbZwEgDNWFZiLJLkgeJnJhJZ
     driver-class-name: com.mysql.cj.jdbc.Driver
     
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -19,7 +19,7 @@ spring:
 
   sql:
     init:
-      mode: never                              # ⬅ Ejecuta data.sql siempre
+      mode: always                              # ⬅ Ejecuta data.sql siempre
       encoding: UTF-8                          # ⬅ Evita errores de caracteres
 
       
